# top_down_shooter

./: Cargo.toml  README.md
src/: drone.rs  game_loop.rs  lib.rs  main.rs  persistence.rs  player.rs
src/combat/: attack.rs  health.rs  mod.rs  weapons.rs
src/interface/: mod.rs
src/interface/components/: generic_button.rs  mod.rs  text_entry.rs
src/interface/routes/: main_menu.rs  mod.rs  new_profile.rs  profile_list.rs
